--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -6,6 +6,7 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+ <link rel="preload" href="/public/images/graphics/phone-frame.png" as="image">
  <script src="https://kit.fontawesome.com/84ba4b14eb.js" crossorigin="anonymous"></script>
  <title>{title}</title>
 </head>
