--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+ <meta charset="UTF-8">
  <link rel="icon" href="/public/images/favicon.png">
  <script src="https://kit.fontawesome.com/84ba4b14eb.js" crossorigin="anonymous"></script>
  <title>{title}</title>
