--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -3,7 +3,9 @@
 <head>
  <meta name="viewport" content="width=device-width,initial-scale=1.0">
  <meta charset="UTF-8">
- <link rel="icon" href="/public/images/favicon.png">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="description" content="Centro: The Job Huntnig Service built for the average job seeker to succeed. Apply to jobs daily, and generate referrals for your job profile - starting at only $25 a month!">
+ <link rel="icon" href="/public/images/favicon.png">i
  <script src="https://kit.fontawesome.com/84ba4b14eb.js" crossorigin="anonymous"></script>
  <title>{title}</title>
 </head>
